2011-07-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Bump Automake required version to 1.11.1.

	* configure.ac (AM_INIT_AUTOMAKE): Specify "1.11.1".

2011-08-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc int] Use @uref more.

	* doc/guile-pg.texi (Top): Use @uref instead of @url.

2011-07-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Disable dependency tracking support in Automake by default.

	* configure.ac (AM_INIT_AUTOMAKE): Add ‘no-dependencies’.

2011-07-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot int] Use ‘GUILE_TOOLS_EXISTSP’.

	* build-aux/guile-tools-existsp.m4: New file.
	* configure.ac: Use ‘GUILE_TOOLS_EXISTSP’.

2011-07-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot int] Use ‘DETERMINE_GUILE_LIBSITE_DIR’.

	* build-aux/determine-guile-libsite-dir.m4: New file.
	* configure.ac: Use ‘DETERMINE_GUILE_LIBSITE_DIR’.

2011-07-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc int] Portability fix: Avoid ‘string-append’ on symbols.

	* doc/mkinc (fln): Delete proc; import ‘write-line’ as alias, instead.
	(pp-ls): Convert the blurb to a string before passing to ‘fln’.

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.40 (tag v0.40)

	* configure.ac (AC_INIT): Bump version to "0.40" for release.

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use Guile-BAUX to compute ‘GUILE_LIBSITE’.

	* autogen.sh: Import Guile-BAUX module ‘re-prefixed-site-dirs’.
	* configure.ac (GUILE_LIBSITE_DIR): Delete macro call.
	(pg_cv_minstroot): New var, via ‘AC_CACHE_CHECK’.
	(GUILE_LIBSITE): New AC_SUBST.

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use <postgresql/foo> for checking decls.

	Omission from 2011-06-02, "Prefer libpq headers
	in $(includedir)/postgresql, if available".

	* configure.ac (pg_encoding_to_char, pg_char_to_encoding):
	In this AC_CHECK_DECLS, use <postgresql/libpq-fe.h> if available.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Prefer libpq headers in $(includedir)/postgresql, if available.
